--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     <link rel="stylesheet" type="text/css" href="css/styleguide.css" />
     <link rel="stylesheet" type="text/css" href="css/globals.css" />
   </head>
+  body { position: fixed; height: 100% }
   <body style="margin: 0">
     <input type="hidden" id="anPageName" name="page" value="loading-screen-msg" />
     <div class="container-center-horizontal">
