--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="description" content="Welcome to the world of inspiration & animation" />
     <link rel="shortcut icon" type=image/png href=Favicon.png/>
     <meta name="viewport" content="width=1920, maximum-scale=1.0" />
+    <meta name="viewport" content="initial-scale=1, maximum-scale=1">
     <link rel="shortcut icon" type="image/png" href="Favicon.png" />
     <meta name="og:type" content="website" />
     <meta name="twitter:card" content="photo" />
@@ -12,7 +13,6 @@
     <link rel="stylesheet" type="text/css" href="css/styleguide.css" />
     <link rel="stylesheet" type="text/css" href="css/globals.css" />
   </head>
-  body { position: fixed; height: 100% }
   <body style="margin: 0">
     <input type="hidden" id="anPageName" name="page" value="loading-screen-msg" />
     <div class="container-center-horizontal">
