--- a/contact-us.html
+++ b/contact-us.html
@@ -97,8 +97,26 @@
       </form>
     </div>
      <script>
+      
+       if (!HTMLFormElement.prototype.reportValidity) {
+        HTMLFormElement.prototype.reportValidity = function () {
+          if (this.checkValidity()) return true;
+          var btn = document.createElement("button");
+          this.appendChild(btn);
+          btn.click();
+          this.removeChild(btn);
+          return false;
+        };
+      }
 
-     <form action="mailto:delta.alphastudios@gmail.com" method="get" enctype="text/plain">
+      function SubmitForm(form_name) {
+        var form = document.getElementsByName(form_name)[0];
+        if (form.reportValidity()) {
+          form.submit();
+          if (window.submitted) window.submitted();
+        }
+      }
+     
     </script>
   </body>
 </html>
