--- a/contact-us.html
+++ b/contact-us.html
@@ -69,9 +69,9 @@
             <a href="submit-thank-you.html">
               <div class="submit-button">
                 <div class="submit-container">
-                  <a href="javascript:SubmitForm('form2')" Onclick="mailto:delta.alphastudios@gmail.com" method="get" enctype="text/plain"
+                  <a href="javascript:SubmitForm('form2')" Onclick="mailto:delta.alphastudios@gmail.com" 
                     ><img class="submit-blue-box" src="img/submit-blue-box@1x.png" /> </a
-                  ><a href="javascript:SubmitForm('form2')" Onclick="mailto:delta.alphastudios@gmail.com" method="get" enctype="text/plain"
+                  ><a href="javascript:SubmitForm('form2')" Onclick="mailto:delta.alphastudios@gmail.com" 
                     ><div class="submit segoeui-bold-supernova-54px">Submit</div>
                   </a>
                 </div>
