--- a/contact-us.html
+++ b/contact-us.html
@@ -15,7 +15,7 @@
   <body style="margin: 0; background: #ffffff">
     <input type="hidden" id="anPageName" name="page" value="contact-us" />
     <div class="container-center-horizontal">
-      <form class="contact-us screen" name="form2" action="form2" method="get">
+      <form class="contact-us screen" name="form2" action="form2" method="post">
         <div class="overlap-group7">
           <div class="basic-indoor-sceene">
             <video
@@ -69,9 +69,9 @@
             <a href="submit-thank-you.html">
               <div class="submit-button">
                 <div class="submit-container">
-                  <a href="javascript:SubmitForm('form2')" Onclick="mailto:delta.alphastudios@gmail.com" 
+                  <a href="javascript:SubmitForm('form2')" onclick="mailto:delta.alphastudios@gmail.com"
                     ><img class="submit-blue-box" src="img/submit-blue-box@1x.png" /> </a
-                  ><a href="javascript:SubmitForm('form2')" Onclick="mailto:delta.alphastudios@gmail.com" 
+                  ><a href="javascript:SubmitForm('form2')" onclick="mailto:delta.alphastudios@gmail.com"
                     ><div class="submit segoeui-bold-supernova-54px">Submit</div>
                   </a>
                 </div>
