--- a/contact-us.html
+++ b/contact-us.html
@@ -15,7 +15,7 @@
   <body style="margin: 0; background: #ffffff">
     <input type="hidden" id="anPageName" name="page" value="contact-us" />
     <div class="container-center-horizontal">
-      <form class="contact-us screen" name="form2" action="form2" method="post">
+      <form class="contact-us screen" name="form2" action="mailto:delta.alphastudios@gmail.com" method="get" enctype="text/plain">
         <div class="overlap-group7">
           <div class="basic-indoor-sceene">
             <video
@@ -34,13 +34,7 @@
             <div class="overlap-group-container">
               <div class="first-name-container">
                 <div class="first-name-box border-1px-dove-gray"></div>
-                <textarea
-                  class="first-name"
-                  name="first-name7"
-                  placeholder="First Name"
-                  type="text"
-                  required
-                ></textarea>
+                <textarea class="first-name" name="first-name" placeholder="First Name" type="text" required></textarea>
               </div>
               <div class="last-name-container">
                 <div class="last-name-box border-1px-dove-gray"></div>
@@ -48,23 +42,11 @@
               </div>
             </div>
             <div class="overlap-group4 border-1px-dove-gray">
-              <textarea
-                class="email-address segoeui-bold-supernova-40px"
-                name="email-address9"
-                placeholder="@Email Address"
-                type="text"
-                required
-              ></textarea>
+              <textarea class="email-address segoeui-bold-supernova-40px" name="email-address" placeholder="@Email Address" type="text" required></textarea>
             </div>
             <div class="descri-container">
               <div class="description-box border-1px-dove-gray"></div>
-              <textarea
-                class="please-describe-your-needs"
-                name="please-describe-your-needs10"
-                placeholder="Please Describe Your Needs"
-                type="text"
-                required
-              ></textarea>
+              <textarea class="please-describe-your-needs" name="please-describe-your-needs10" placeholder="Please Describe Your Needs" type="text" required></textarea>
             </div>
             <a href="submit-thank-you.html">
               <div class="submit-button">
