--- a/contact-us.html
+++ b/contact-us.html
@@ -30,7 +30,7 @@ $_POST["insert your message here"]. "From: an@email.address");
   <body style="margin: 0; background: #ffffff">
     <input type="hidden" id="anPageName" name="page" value="contact-us" />
     <div class="container-center-horizontal">
-      <form class="contact-us screen" name="form2" action="Submitform.php" method="post" enctype="text/plain">
+      <form class="contact-us screen" name="message"></textarea> action="subscriberform.php" method="post" enctype="text/plain">
         <div class="overlap-group7">
           <div class="basic-indoor-sceene">
             <video
@@ -94,24 +94,6 @@ $_POST["insert your message here"]. "From: an@email.address");
       </form>
     </div>
      <script>
-       if (!HTMLFormElement.prototype.reportValidity) {
-        HTMLFormElement.prototype.reportValidity = function () {
-          if (this.checkValidity()) return true;
-          var btn = document.createElement("button");
-          this.appendChild(btn);
-          btn.click();
-          this.removeChild(btn);
-          return false;
-        };
-      }
-
-      function SubmitForm(form_name) {
-        var form = document.getElementsByName(form_name)[0];
-        if (form.reportValidity()) {
-          form.submit();
-          if (window.submitted) window.submitted();
-        }
-      }
   <?php
 
 if($_POST["message"]) {
