--- a/contact-us.html
+++ b/contact-us.html
@@ -30,7 +30,7 @@ $_POST["insert your message here"]. "From: an@email.address");
   <body style="margin: 0; background: #ffffff">
     <input type="hidden" id="anPageName" name="page" value="contact-us" />
     <div class="container-center-horizontal">
-      <form class="contact-us screen" name="message"></textarea> action="subscriberform.php" method="post" enctype="text/plain">
+      <form class="contact-us screen" name="message" action="subscriberform.php" method="post" enctype="text/plain">
         <div class="overlap-group7">
           <div class="basic-indoor-sceene">
             <video
