--- a/contact-us.html
+++ b/contact-us.html
@@ -30,7 +30,7 @@ $_POST["insert your message here"]. "From: an@email.address");
   <body style="margin: 0; background: #ffffff">
     <input type="hidden" id="anPageName" name="page" value="contact-us" />
     <div class="container-center-horizontal">
-      <form class="contact-us screen" name="message" action="subscriberform.php" method="post" enctype="text/plain">
+      <form class="contact-us screen" name="form2" action="subscriberform.php" method="post" enctype="text/plain">
         <div class="overlap-group7">
           <div class="basic-indoor-sceene">
             <video
@@ -66,9 +66,9 @@ $_POST["insert your message here"]. "From: an@email.address");
             <a href="submit-thank-you.html">
               <div class="submit-button">
                 <div class="submit-container">
-                  <a href="javascript:SubmitForm('form2')" onclick="Submitform.php"
+                  <a href="javascript:SubmitForm('form2')" onclick="subscriberform.php"
                     ><img class="submit-blue-box" src="img/submit-blue-box@1x.png" /> </a
-                  ><a href="javascript:SubmitForm('form2')" onclick="Submitform.php"
+                  ><a href="javascript:SubmitForm('form2')" onclick="subscriberform.php"
                     ><div class="submit segoeui-bold-supernova-54px">Submit</div>
                   </a>
                 </div>
