--- a/contact-us.html
+++ b/contact-us.html
@@ -1,4 +1,3 @@
- 
 <!DOCTYPE html>
 <html>
   <head>
@@ -29,9 +28,26 @@
           </div>
           <div class="overlap-group1">
             <div class="ready-to-hit-the-act">
-              Ready to hit the action button on your project?<br />&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Email us to fill us in on your vision
+              Ready to hit the action button on your project?<br />&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Fill
+              out this quick form to fill us in
             </div>
             <div class="overlap-group-container">
+              <div class="first-name-container">
+                <div class="first-name-box border-1px-dove-gray"></div>
+                <textarea class="first-name" name="first-name" placeholder="First Name" type="text" required></textarea>
+              </div>
+              <div class="last-name-container">
+                <div class="last-name-box border-1px-dove-gray"></div>
+                <textarea class="last-name" name="last-name8" placeholder="Last Name" type="text" required></textarea>
+              </div>
+            </div>
+            <div class="overlap-group4 border-1px-dove-gray">
+              <textarea class="email-address segoeui-bold-supernova-40px" name="email-address" placeholder="@Email Address" type="text" required></textarea>
+            </div>
+            <div class="descri-container">
+              <div class="description-box border-1px-dove-gray"></div>
+              <textarea class="please-describe-your-needs" name="please-describe-your-needs10" placeholder="Please Describe Your Needs" type="text" required></textarea>
+            </div>
             <a href="submit-thank-you.html">
               <div class="submit-button">
                 <div class="submit-container">
