--- a/contact-us.html
+++ b/contact-us.html
@@ -1,3 +1,18 @@
+ 
+
+<?php
+
+if($_GET["message"]) {
+
+mail("your@email.address", "Here is the subject line",
+
+$_Get["insert your message here"]. "From: an@email.address");
+
+}
+
+?>
+
+
 <!DOCTYPE html>
 <html>
   <head>
