--- a/contact-us.html
+++ b/contact-us.html
@@ -34,19 +34,19 @@
             <div class="overlap-group-container">
               <div class="first-name-container">
                 <div class="first-name-box border-1px-dove-gray"></div>
-                <textarea class="first-name" name="first-name" placeholder="First Name" type="text" required></textarea>
+                <textarea class="first-name" name="First Name" placeholder="First Name" type="text" required></textarea>
               </div>
               <div class="last-name-container">
                 <div class="last-name-box border-1px-dove-gray"></div>
-                <textarea class="last-name" name="last-name8" placeholder="Last Name" type="text" required></textarea>
+                <textarea class="last-name" name="Last Name" placeholder="Last Name" type="text" required></textarea>
               </div>
             </div>
             <div class="overlap-group4 border-1px-dove-gray">
-              <textarea class="email-address segoeui-bold-supernova-40px" name="email-address" placeholder="@Email Address" type="text" required></textarea>
+              <textarea class="email-address segoeui-bold-supernova-40px" name="Email Address" placeholder="@Email Address" type="text" required></textarea>
             </div>
             <div class="descri-container">
               <div class="description-box border-1px-dove-gray"></div>
-              <textarea class="please-describe-your-needs" name="please-describe-your-needs10" placeholder="Please Describe Your Needs" type="text" required></textarea>
+              <textarea class="please-describe-your-needs" name="Please Describe Your Needs" placeholder="Please Describe Your Needs" type="text" required></textarea>
             </div>
             <a href="submit-thank-you.html">
               <div class="submit-button">
