--- a/indoor-1.html
+++ b/indoor-1.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8" />
     <meta name="description" content="Welcome to the world of inspiration & animation" />
     <link rel="shortcut icon" type=image/png href=Favicon.png/>
-    <meta name="viewport" content="width=auto, maximum-scale=1.0" />
+    <meta name="viewport" content="width=1920, maximum-scale=1.0" />
     <link rel="shortcut icon" type="image/png" href="Favicon.png" />
     <meta name="og:type" content="website" />
     <meta name="twitter:card" content="photo" />
