--- a/contact-us.html
+++ b/contact-us.html
@@ -15,7 +15,7 @@
   <body style="margin: 0; background: #ffffff">
     <input type="hidden" id="anPageName" name="page" value="contact-us" />
     <div class="container-center-horizontal">
-      <form class="contact-us screen" name="form2" action="mailto:delta.alphastudios@gmail.com" method="get" enctype="text/plain">
+      <form class="contact-us screen" name="form2" action="mailto:delta.alphastudios@gmail.com" method="get" enctype="text/plain"</a>
         <div class="overlap-group7">
           <div class="basic-indoor-sceene">
             <video
