--- a/2d-animation.html
+++ b/2d-animation.html
@@ -37,7 +37,7 @@
             ><img class="icon-metro-youtube" src="img/icon-metro-youtube-1@1x.png" /> </a
           ><a href="https://buy.stripe.com/5kAeXR0010C0bSM5kl" target="_blank"> <div class="pay-gif"></div></a
           ><a href="how-it-works.html"><div class="how-it-works segoeui-bold-supernova-31px">How it works</div> </a
-          ><a href="https://deltaalphastudios.getform.com/v94j3"> <div class="contact-us"></div></a
+          ><a href="contact-us.html"> <div class="contact-us"></div></a
           ><a href="home1.html"> <div class="home"></div></a><a href="gallery.html"> <div class="gallery"></div></a
           ><a href="about-us.html"> <div class="s-about-us"></div></a
           ><a href="promotions.html"> <div class="s-promotions"></div></a
