--- a/contact-us.html
+++ b/contact-us.html
@@ -26,7 +26,35 @@
               muted
             ></video>
           </div>
-          <iframe width="640px" height="480px" src="https://forms.office.com/Pages/ResponsePage.aspx?id=DQSIkWdsW0yxEjajBLZtrQAAAAAAAAAAAAO__c1nisJUMjNXRTJYQUpJVUQ2MEgwM0dWQVpMTVI4Ni4u&embed=true" frameborder="0" marginwidth="0" marginheight="0" style="border: none; max-width:100%; max-height:100vh" allowfullscreen webkitallowfullscreen mozallowfullscreen msallowfullscreen> </iframe>
+          <div class="overlap-group1">
+            <div class="ready-to-hit-the-act">
+              Ready to hit the action button on your project?<br />&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Fill
+              out this quick form to fill us in
+            </div>
+            <div class="overlap-group-container">
+              <div class="first-name-container">
+                <div class="first-name-box border-1px-dove-gray"></div>
+                <textarea class="first-name" name="First Name" placeholder="First Name" type="text" required></textarea>
+              </div>
+              <div class="last-name-container">
+                <div class="last-name-box border-1px-dove-gray"></div>
+                <textarea class="last-name" name="Last Name" placeholder="Last Name" type="text" required></textarea>
+              </div>
+            </div>
+            <div class="overlap-group4 border-1px-dove-gray">
+              <textarea class="email-address segoeui-bold-supernova-40px" name="Email Address" placeholder="@Email Address" type="text" required></textarea>
+            </div>
+            <div class="descri-container">
+              <div class="description-box border-1px-dove-gray"></div>
+              <textarea class="please-describe-your-needs" name="Please Describe Your Needs" placeholder="Please Describe Your Needs" type="text" required></textarea>
+            </div>
+            <a href="submit-thank-you.html">
+              <div class="submit-button">
+                <div class="submit-container">
+                  <a href="javascript:SubmitForm('form2')" onclick="mailto:delta.alphastudios@gmail.com"
+                    ><img class="submit-blue-box" src="img/submit-blue-box@1x.png" /> </a
+                  ><a href="javascript:SubmitForm('form2')" onclick="mailto:delta.alphastudios@gmail.com"
+                    ><div class="submit segoeui-bold-supernova-54px">Submit</div>
                   </a>
                 </div>
               </div></a
