--- a/contact-us.html
+++ b/contact-us.html
@@ -12,66 +12,10 @@
     <link rel="stylesheet" type="text/css" href="css/styleguide.css" />
     <link rel="stylesheet" type="text/css" href="css/globals.css" />
   </head>
-  <body style="margin: 0; background: #ffffff">
-    <input type="hidden" id="anPageName" name="page" value="contact-us" />
-    <div class="container-center-horizontal">
-      <form class="contact-us screen" name="form2" action="mailto:delta.alphastudios@gmail.com" method="post" enctype="text/plain">
-        <div class="overlap-group7">
-          <div class="basic-indoor-sceene">
-            <video
-              src="https://cdn.animaapp.com/projects/6293c5b71230b0804aeb9040/files/scene-da-indoor-scene.mp4"
-              loop
-              autoplay="autoplay"
-              playsinline
-              muted
-            ></video>
-          </div>
+<body>
 
-           </div>       
-          </a>
-                </div>
-              </div></a
-            >
-            <div class="flex-row">
-              <div class="check-box"><img class="icon-check_mark" src="img/icon-awesome-check-1x-png@1x.png" /></div>
-              <div class="overlap-group5">
-                <div class="i-agree-to-the">I agree to the</div>
-                <a href="terms-conditions.html"
-                  ><div class="terms-conditions">
-                    <span class="span0">&nbsp;</span><span class="span1">Terms &amp; Conditions</span>
-                  </div>
-                </a>
-              </div>
-            </div>
-          </div>
-          <a href="how-it-works.html"><div class="how-it-works segoeui-bold-supernova-31px">How it works</div> </a
-          ><a href="indoor-1.html"> <div class="services"></div></a><a href="home1.html"> <div class="home"></div></a
-          ><a href="about-us.html"> <div class="m-about-us"></div></a
-          ><a href="gallery.html"> <div class="gallery"></div></a>
-        </div>
-      </form>
-    </div>
-     <script>
-      
-       if (!HTMLFormElement.prototype.reportValidity) {
-        HTMLFormElement.prototype.reportValidity = function () {
-          if (this.checkValidity()) return true;
-          var btn = document.createElement("button");
-          this.appendChild(btn);
-          btn.click();
-          this.removeChild(btn);
-          return false;
-        };
-      }
+<iframe width="640px" height="480px" src="https://forms.office.com/Pages/ResponsePage.aspx?id=DQSIkWdsW0yxEjajBLZtrQAAAAAAAAAAAAO__c1nisJUMjNXRTJYQUpJVUQ2MEgwM0dWQVpMTVI4Ni4u&embed=true" frameborder="0" marginwidth="0" marginheight="0" style="border: none; max-width:100%; max-height:100vh" allowfullscreen webkitallowfullscreen mozallowfullscreen msallowfullscreen> </iframe>
 
-      function SubmitForm(form_name) {
-        var form = document.getElementsByName(form_name)[0];
-        if (form.reportValidity()) {
-          form.submit();
-          if (window.submitted) window.submitted();
-        }
-      }
-     
-    </script>
-  </body>
+</body>
 </html>
+
