--- a/contact-us.html
+++ b/contact-us.html
@@ -14,7 +14,7 @@
   </head>
 <body>
  
-  <iframe width="1920px" height="1080px" src="https://forms.office.com/Pages/ResponsePage.aspx?id=DQSIkWdsW0yxEjajBLZtrQAAAAAAAAAAAAO__c1nisJUMjNXRTJYQUpJVUQ2MEgwM0dWQVpMTVI4Ni4u&embed=true" frameborder="0" marginwidth="0" marginheight="0" style="border: none; max-width:100%; max-height:100vh" allowfullscreen webkitallowfullscreen mozallowfullscreen msallowfullscreen> </iframe>
+  <iframe width="1920px" height="1080px" src="https://forms.office.com/Pages/ResponsePage.aspx?id=DQSIkWdsW0yxEjajBLZtrQAAAAAAAAAAAAO__c1nisJUMjNXRTJYQUpJVUQ2MEgwM0dWQVpMTVI4Ni4u&embed=true" frameborder="0" marginwidth="0" marginheight="0" style="border: none; max-width:100%; max-height:100vh" allowfullscreen webkitallowfullscreen mozallowfullscreen msallowfullscreen> 
   
   
           <a href="indoor-1.html"> <div class="services"></div></a><a href="home1.html"> <div class="home"></div></a
@@ -22,7 +22,7 @@
           ><a href="contact-us.html"> <div class="s-contact-us"></div></a
           ><a href="gallery.html"> <div class="gallery"></div></a>
         
-  
+  </iframe>
 
 </body>
 </html>
