--- a/contact-us.html
+++ b/contact-us.html
@@ -20,7 +20,7 @@
           <a href="indoor-1.html"> <div class="services"></div></a><a href="home1.html"> <div class="home"></div></a
           ><a href="about-us.html"> <div class="m-about-us"></div></a
           ><a href="contact-us.html"> <div class="s-contact-us"></div></a
-          ><a href="gallery.html"> <div class="gallery"></div></a>
+          ><a href="gallery.html"> 
         
   </iframe>
 
