--- a/contact-us.html
+++ b/contact-us.html
@@ -13,8 +13,15 @@
     <link rel="stylesheet" type="text/css" href="css/globals.css" />
   </head>
 <body>
- 
-
+  
+  </div>
+          <a href="indoor-1.html"> <div class="services"></div></a><a href="home1.html"> <div class="home"></div></a
+          ><a href="about-us.html"> <div class="m-about-us"></div></a
+          ><a href="contact-us.html"> <div class="s-contact-us"></div></a
+          ><a href="gallery.html"> <div class="gallery"></div></a>
+        </div>
+      </div>
+    </div>
 </body>
 </html>
 
