--- a/contact-us.html
+++ b/contact-us.html
@@ -12,8 +12,7 @@
     <link rel="stylesheet" type="text/css" href="css/styleguide.css" />
     <link rel="stylesheet" type="text/css" href="css/globals.css" />
   </head>
-<body>
-  
+  <body style="margin: 0; background: #ffffff">
   </div>
           <a href="indoor-1.html"> <div class="services"></div></a><a href="home1.html"> <div class="home"></div></a
           ><a href="about-us.html"> <div class="m-about-us"></div></a
