--- a/contact-us.html
+++ b/contact-us.html
@@ -13,7 +13,17 @@
     <link rel="stylesheet" type="text/css" href="css/globals.css" />
   </head>
   <body style="margin: 0; background: #ffffff">
-  </div>
+    <input type="hidden" id="anPageName" name="page" value="da-on-fire" />
+    <div class="container-center-horizontal">
+      <div class="da-on-fire screen">
+        <div class="overlap-group">
+          <div class="da-on-fire-gallery-vid">
+            <video
+              src="https://cdn.animaapp.com/projects/6293c5b71230b0804aeb9040/files/da-on-fire-gallery-vid.mp4"
+              controls
+              playsinline
+            ></video>
+          </div>
           <a href="indoor-1.html"> <div class="services"></div></a><a href="home1.html"> <div class="home"></div></a
           ><a href="about-us.html"> <div class="m-about-us"></div></a
           ><a href="contact-us.html"> <div class="s-contact-us"></div></a
@@ -21,6 +31,7 @@
         </div>
       </div>
     </div>
+  </body>
 </body>
 </html>
 
