--- a/contact-us.html
+++ b/contact-us.html
@@ -8,7 +8,7 @@
     <link rel="shortcut icon" type="image/png" href="Favicon.png" />
     <meta name="og:type" content="website" />
     <meta name="twitter:card" content="photo" />
-    <link rel="stylesheet" type="text/css" href="css/da-on-fire.css" />
+    <link rel="stylesheet" type="text/css" href="css/contact-us.css" />
     <link rel="stylesheet" type="text/css" href="css/styleguide.css" />
     <link rel="stylesheet" type="text/css" href="css/globals.css" />
   </head>
